<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:padding="35dp">


    <TextView
        android:id="@+id/txtRecharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge"
        android:textSize="35sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear1"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtRecharge"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="15sp"
            android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
            android:text="Plan details"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tdAmount"
            android:text="Amount"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tdDuration"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="Duration"
            android:textColor="#000000"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payment Information"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        android:layout_marginTop="25dp"
        android:id="@+id/txtPay"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tdName"
        app:layout_constraintTop_toBottomOf="@+id/txtPay"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tdCard"
        app:layout_constraintTop_toBottomOf="@+id/tdName"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        app:layout_constraintTop_toBottomOf="@+id/tdCard"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tdExp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tdName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exp_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tdCvv"
            android:layout_marginStart="5dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="CVV" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPay"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        style="?attr/materialButtonOutlinedStyle"
        android:text="Pay" />

</androidx.constraintlayout.widget.ConstraintLayout>