<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardDetails"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/txtCardDetail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="35dp"
        android:text="@string/card_details"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#648496"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCardDetail"
        style="?attr/materialCardViewElevatedStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/txtName"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onPrimary"
                android:text="@string/card_number"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/txtCardNumber"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                android:layout_marginStart="15dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/txtActivePlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtExpDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/md_theme_light_onPrimary"
                    android:text="TextView"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/card">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardDetailsRecyclerView"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>